test/jsbt/vectors/errors/no-calls/src/index.ts
/**
 * Checks a value.
 * @param value - value to validate.
 * @returns checked bytes.
 * @example
 * ```js
 * import { check } from '@jsbt-test/errors-no-calls';
 * const value = new Uint8Array([1]);
 * ```
 */
export function check(value: Uint8Array): Uint8Array {
  return value;
}
